--- a/unit_2/acitivity2.html
+++ b/unit_2/acitivity2.html
@@ -4,9 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HTML CV</title>
 </head>
 <body>
-    
+    <center>
+    <header>
+        <h2>Lucy Thomson</h2>
+        <h5>DOB: 06/07/2004</h5>
+    </header>
+    </center>
+
+    <h4>Work Expierience</h4>
+    <ul>
+        <li><b>McDonalds</b> - October 2021 - September 2022</li>
+        <li><b>Bernardos Charity Shop</b> - March 2019 - October 2021</li>
+        <li><b>Aura Nightclub</b> - September 2022 - October 2022</li>
+    </ul>
+
+    <h4>Skills</h4>
+    <ul>
+        <li><b>Scouts</b> - 2013 - 2022</li>
+        <li><b>Duke of Edinbrough</b> - Silver Award</li>
+    </ul>
 </body>
 </html>
