--- a/unit_2/acitivity2.html
+++ b/unit_2/acitivity2.html
@@ -14,17 +14,22 @@
     </header>
     </center>
 
-    <h4>Work Expierience</h4>
-    <ul>
-        <li><b>McDonalds</b> - October 2021 - September 2022</li>
-        <li><b>Bernardos Charity Shop</b> - March 2019 - October 2021</li>
-        <li><b>Aura Nightclub</b> - September 2022 - October 2022</li>
-    </ul>
+    <section>
+        <h4>Work Expierience</h4>
+        <ul>
+            <li><b>McDonalds</b> - October 2021 - September 2022</li>
+            <li><b>Bernardos Charity Shop</b> - March 2019 - October 2021</li>
+            <li><b>Aura Nightclub</b> - September 2022 - October 2022</li>
+        </ul>
+    </section>
 
-    <h4>Skills</h4>
-    <ul>
-        <li><b>Scouts</b> - 2013 - 2022</li>
-        <li><b>Duke of Edinbrough</b> - Silver Award</li>
-    </ul>
+    <section>
+        <h4>Skills</h4>
+        <ul>
+            <li><b>Scouts</b> - 2013 - 2022</li>
+            <li><b>Duke of Edinbrough</b> - Silver Award</li>
+        </ul>
+    </section>
+
 </body>
 </html>
