--- a/unit_2/acitivity2.html
+++ b/unit_2/acitivity2.html
@@ -28,8 +28,27 @@
         <ul>
             <li><b>Scouts</b> - 2013 - 2022</li>
             <li><b>Duke of Edinbrough</b> - Silver Award</li>
+            <li><b>Computing</b>
+            <ol>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JavaScript</li>
+                <li>Python</li>
+                <li>C#</li>
+                <li>Java</li>
+                <li>Visual Basic</li>
+            </ol></li>
         </ul>
     </section>
 
+    <footer style="background-color: #C5C5C5; display: block; padding:10px 0 10px;">
+        <center>
+        <p>Socials:
+            <a href="https://www.instagram.com">Instagram</a>
+            <a href="https://www.facebook.com">Facebook</a>
+            <a href="https://www.twitter.com">Twitter</a>
+        </p>
+        </center>
+    </footer>
 </body>
 </html>
