--- a/unit_07/activity2/index.html
+++ b/unit_07/activity2/index.html
@@ -16,13 +16,13 @@
 
         <p>Select tip:</p>
         <div class="radio-toolbar">
-            <input type="radio" id="5-perc" name="radios" value="1.05" checked>
+            <input onclick="update()" type="radio" id="5-perc" name="radios" value="1.05">
             <label for="5-perc">5%</label>
           
-            <input type="radio" id="10-perc" name="radios" value="1.1">
+            <input onclick="update()" type="radio" id="10-perc" name="radios" value="1.1">
             <label for="10-perc">10%</label>
           
-            <input type="radio" id="25-perc" name="radios" value="1.25">
+            <input onclick="update()" type="radio" id="25-perc" name="radios" value="1.25">
             <label for="25-perc">25%</label>
         </div>
     </form>
