--- a/unit_08/activity1/index.html
+++ b/unit_08/activity1/index.html
@@ -19,7 +19,7 @@
     <form>
         <label for="amount">Enter Total Bill Amount:</label><br>
         <input type="input" name="amount" id="amount">
-        <ol id="selectable">
+        <ol class="selectable">
             <li>10</li>
             <li>20</li>
             <li>30</li>
