--- a/unit_09/index.html
+++ b/unit_09/index.html
@@ -21,7 +21,7 @@
             <h1>Movies</h1>
             <p>Search Movies here: </p>
             <input type="text" id="movieSearch">
-            <button class="btn" onclick="buttonFunc()">Submit</button><br>
+            <button class="btn btn-primary" onclick="buttonFunc()">Submit</button><br><br>
             <div id="list">
             </div>
         </div>
